fix alignment

--- a/Alpha/css/style.css
+++ b/Alpha/css/style.css
@@ -37,6 +37,7 @@ body,
 html {
   position: relative;
   min-width: 1800px;
+  max-width:1920px;
   width: 100%;
   height: 100%;
   background-color: #e8eaf1;
@@ -68,7 +69,7 @@ div#cover {
  }
 
 #slogan {
-  padding-left: 240px;
+  padding-left: 281px;
   margin: 0 auto;
   width: 100%;
   height: 44px;
@@ -98,7 +99,7 @@ div#navigationBar {
  }
 
  div#navigationBar li:first-child {
-   padding-left: 240px;
+   padding-left: 281px;
    padding-right: 10px;
  }
 
@@ -322,17 +323,23 @@ div#threeDesc {
     /*padding-top: 50px;*/
     margin-left: 20px;
     float: left;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+
   }
 
-  div#threeDesc div#pageIntro div#fashion {  background: url(../img/three/fashion-page.png) no-repeat center }
+  div#threeDesc div#pageIntro div#fashion {  background: url(../img/three/fashion-page.png) no-repeat center;    -webkit-background-size: contain;
+    -moz-background-size: contain;
+    -o-background-size: contain;
+    background-size: contain; }
 
-  div#threeDesc div#pageIntro div#tech {  background: url(../img/three/tech-page.png) no-repeat center }
+  div#threeDesc div#pageIntro div#tech {  background: url(../img/three/tech-page.png) no-repeat center;    -webkit-background-size: contain;
+    -moz-background-size: contain;
+    -o-background-size: contain;
+    background-size: contain; }
 
-  div#threeDesc div#pageIntro div#food {  background: url(../img/three/food-page.png) no-repeat center }
+  div#threeDesc div#pageIntro div#food {  background: url(../img/three/food-page.png) no-repeat center;    -webkit-background-size: contain;
+    -moz-background-size: contain;
+    -o-background-size: contain;
+    background-size: contain; }
 
 /* ===[ Simple DIV ]===
    ================================================== */
@@ -367,7 +374,7 @@ div#simple {
     margin: 0 auto;
     bottom: 0;
     margin-bottom: -25px;
-    margin-left: 200px;
+    margin-left: 15%;
     width: 1050px;
     height: 600px;
     background: url(../img/simple/Macbookpro.png) no-repeat;
@@ -410,8 +417,8 @@ div#simple {
  }
 
  div#simple #desctextdiv {
-   padding-top: 30px;
-   padding-bottom: 30px;
+   padding-top: 15px;
+   padding-bottom: 15px;
  }
 
   div#simple #desctextdiv div#headline {
